Fixing medium link

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           This webpage is hosted in Github Pages and the code is available on <a href="//github.com/praneshr/praneshr.github.io" class="fancy">Github</a>
         </div>
          <div class="bottom-links inayam">
-            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>
+            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
           </div>
           <p>Best viewed in Webkit based browsers.</p>
       </footer>
