Changing the about me text content

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <h2>About Me</h2>
         <div class="enna-pathi">
           <p>
-            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
           </p>
           <p id="second">
-            In  my free time, I'll play badminton(Few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listen to all kind of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
+            In my spare time, I’ll either be playing badminton (few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listening to different genres of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
           </p>
           <div class="inayam">
             <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
@@ -243,7 +243,6 @@
          <div class="bottom-links inayam">
             <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
           </div>
-          <p>Best viewed in Webkit based browsers.</p>
       </footer>
     </div>
     <script>
