Text content fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>About Me</h2>
         <div class="enna-pathi">
           <p>
-            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience in this field, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
           </p>
           <p id="second">
             In my spare time, I’ll either be playing badminton (few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listening to different genres of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
@@ -119,7 +119,7 @@
               </div>
             </div>
             <div class="enna-pathi">
-              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI, Snap CI. Also, I have a good knowledge about Docker and basics about Kubernetes. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
+              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI, Snap CI. Also, I have a good knowledge on Docker and basics of Kubernetes. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
             </div>
           </div>
         </div>
