--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pranesh Ravi">
-    <meta name="description" content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix">
+    <meta name="description" content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix">
 
     <meta name="twitter:card" value="summary_large_image">
     <meta name="twitter:site" value="@pranesh_ravi">
     <meta name="twitter:creator" value="@pranesh_ravi">
     <meta name="twitter:title" content="Pranesh Ravi">
-    <meta name="twitter:description" content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix">
+    <meta name="twitter:description" content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix">
     <meta name="twitter:image" content="http://praneshravi.in/img/banner.png">
 
     <meta content="Pranesh Ravi" property="og:site_name">
     <meta content="Pranesh Ravi" property="og:title">
-    <meta content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix" property="og:description">
+    <meta content="Pranesh Ravi's personal website | UI Designer & Full-Stack Developer at Indix" property="og:description">
     <meta content="website" property="og:type">
     <meta content="http://praneshravi.in" property="og:url">
     <meta content="http://praneshravi.in/img/banner.png" property="og:image" />
