--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <div class="cssaw">
         <a href="http://www.cssdesignawards.com/sites/pranesh-ravi-portfolio/29990/" target="_blank"></a>
       </div>
+      <div class="opl-container">
+        <a href="https://onepagelove.com/pranesh-ravi" class="opl" target="_blank"><img width="73" height="56" src="https://s3.amazonaws.com/onepagelove/one-page-love-award-retina-right.png"></a>
+      </div>
       <div class="peru"></div>
       <div class="seira-vela"></div>
       <a href="#about" data-scroll>
