--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             </div>
           </div>
 
-          <div class="row">
+<!--           <div class="row">
             <div class="thalaipu-matrum-matravai">
               <div class="thalaipu">
                 Frame
@@ -181,7 +181,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <div class="ithu-enna-seiyum">
               Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning SCSS.
             </div>
-          </div>
+          </div> -->
 
           <div class="row">
             <div class="thalaipu-matrum-matravai">
