--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             In my spare time, I’ll either be playing badminton (few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listening to different genres of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
           </p>
           <div class="inayam">
-            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
+            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="https://www.linkedin.com/in/pranesh-ravi/" class="fancy">LinkedIn</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
           </div>
         </div>
         <div class="en-moonji">
@@ -159,7 +159,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 Petch
               </div>
               <div class="matravai">
-                <span><a href="http://petch.xyz" class="fancy">View Project</a></span>
+                <span><a href="http://petchxyz.herokuapp.com/" class="fancy">View Project</a></span>
               </div>
             </div>
             <div class="ithu-enna-seiyum">
@@ -256,7 +256,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           This webpage is hosted in Github Pages and the code is available on <a href="//github.com/praneshr/praneshr.github.io" class="fancy">Github</a>
         </div>
          <div class="bottom-links inayam">
-            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
+            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="https://www.linkedin.com/in/pranesh-ravi/" class="fancy">LinkedIn</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
           </div>
       </footer>
     </div>
