--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="inayam">
             <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a>
             <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a>
-            <a href="//pranesh.dribbble.com/" id="db" class="fancy">Dribbble</a>
+            <a href="//praneshr.dribbble.com/" id="db" class="fancy">Dribbble</a>
             <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a>
             <a target="_blank" id="hn" href="https://www.linkedin.com/in/pranesh-ravi/" class="fancy">LinkedIn</a>
             <a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
