--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <h2>About Me</h2>
         <div class="enna-pathi">
           <p>
-            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience in this field, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+            I’m a 24 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience in this field, which includes 3 years of professional experience. Currently, I design and develop world class web applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
           </p>
           <p id="second">
             In my spare time, I’ll either be playing badminton (few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listening to different genres of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
@@ -139,7 +139,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               </div>
             </div>
             <div class="enna-pathi">
-              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI, Snap CI. Also, I have a good knowledge on Docker and basics of Kubernetes. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
+              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI. Also, I have a good knowledge on Docker. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
             </div>
           </div>
         </div>
@@ -156,7 +156,21 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              A movie and TV show listing app with modern design and tech stack.
+              A movie and TV show listing app with modern design and tech stack. I built this on the course of learning Progressive Web Apps.
+            </div>
+          </div>
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Crypto Info
+              </div>
+              <div class="matravai">
+                <span><a href="//www.npmjs.com/package/crypto-info" class="fancy">Npm</a></span>
+                <span><a href="//github.com/praneshr/crypto-info" class="fancy">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              Check cryptocurrency price, market details and conversions in CLI 
             </div>
           </div>
           <div class="row">
@@ -175,15 +189,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="row">
             <div class="thalaipu-matrum-matravai">
               <div class="thalaipu">
-                Petch
+                React Forms
               </div>
               <div class="matravai">
-                <span><a href="http://petchxyz.herokuapp.com/" class="fancy">View Project</a></span>
+                <span><a href="//http://praneshravi.in/react-forms" class="fancy">View Project</a></span>
+                <span><a href="//github.com/praneshr/react-forms" class="fancy">Github</a></span>
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-             Petch is a real-time news crawler. It fetches live news from various social media platforms like Twitter, Facebook and other sources. It was a combined effort by  <a href="//linkedin.com/in/embar"
-                class="fancy" target="_blank">Narayanan Embar</a> and me.
+              A simple, super-flexible, extensible config based form generator for React.
             </div>
           </div>
 
