--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 React Forms
               </div>
               <div class="matravai">
-                <span><a href="//http://praneshravi.in/react-forms" class="fancy">View Project</a></span>
+                <span><a href="//praneshravi.in/react-forms" class="fancy">View Project</a></span>
                 <span><a href="//github.com/praneshr/react-forms" class="fancy">Github</a></span>
               </div>
             </div>
