Adding more contents and resizing images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,18 @@
   <link rel="stylesheet" href="/dist/index.css">
   <title>Pranesh Ravi</title>
 </head>
+
 <body>
   <div class="pattern"></div>
   <div class="container">
     <div class="content">
+      <div class="header">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="/img/logo-1.png" alt="Logo">
+          </div>
+        </div>
+      </div>
       <div class="quote">
         <p>
           Design, Code & Caffeine
@@ -19,166 +28,46 @@
       <img src="/img/divider.svg" alt="divider" class="divider">
       <div class="about">
         <p class="intro">
-          Hello, my name is <b>Pranesh</b>.
-          A passionate UI designer and a Full-Stack developer from Chennai, India.
+          Hello, my name is
+          <b>Pranesh</b>. A passionate UI designer and a Full-Stack developer from Chennai, India.
         </p>
         <p class="info">
-            For the past 3 years I’ve been working on UI design
-            and web developement. I spealize in Sketch, Photoshop,
-            CSS, React JS, Webpack and Node.  I love minimalizam, whitespace,
-            blue and composition. Currently, I design and develop web
-            applications with a group of brilliant people at Indix.
+          I've 3 years of experience designing and building highly scalable web applications. I mostly work with React JS, Node JS
+          and Sketch. I'm also fluent with build tools like Webpack and Parcel, transpilers like Babel and Typescript, CIs
+          like GoCD and Travis. I care a lot about user experience, minimalizm, reusability and clean code.
+        </p>
+        <p class="info">
+          Currently, I design and develop cutting edge web applications with a
+          group of brilliant people at <a href="//indix.com" target="_blank">Indix</a>. Drop me a
+          <a href="mailto:talkto@praneshravi.in">mail</a> for any new opportunity.
         </p>
       </div>
-<<<<<<< HEAD
-      <div class="peru"></div>
-      <div class="seira-vela"></div>
-      <a href="#about" data-scroll>
-        <div class="down">
-          <img src="img/down.svg" alt="">
+      <div class="links">
+        <div class="row">
+          <div class="col-xs-12">
+            <a href="https://github.com/praneshr" id="git" target="_blank">Github</a>
+            <a href="https://praneshr.dribbble.com/" id="dribbble" target="_blank">Dribbble</a>
+            <a href="https://blog.praneshravi.in/" id="medium" target="_blank">Medium</a>
+            <a href="https://stackoverflow.com/users/4945468/pranesh-ravi" id="so" target="_blank">Stackoverflow</a>
+            <a href="https://www.linkedin.com/in/pranesh-ravi/" id="lki" target="_blank">LinkedIn</a>
+          </div>
         </div>
-      </a>
-    </div>
-    <div class="rendu">
-      <header class="hidden-xs hidden-sm hidden-md">
-        <img src="/img/logo.svg" alt="">
-      </header>
-      <div class="hidden-xs hidden-sm hidden-md my-nav">
-        <a data-scroll href="#about" class="fancy">About Me</a>
-        <a data-scroll href="#skills" class="fancy">Skills</a>
-        <a data-scroll href="#projects" class="fancy">Projects</a>
       </div>
-      <div class="container" id="about">
-        <h2>About Me</h2>
-        <div class="enna-pathi">
-          <p>
-            I’m a 24 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience in this field, which includes 3 years of professional experience. Currently, I design and develop world class web applications along with a group of brilliant people at Indix (<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
-          </p>
-          <p id="second">
-            In my spare time, I’ll either be playing badminton (few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listening to different genres of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
-          </p>
-          <div class="inayam">
-            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a>
-            <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a>
-            <a href="//praneshr.dribbble.com/" id="db" class="fancy">Dribbble</a>
-            <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a>
-            <a target="_blank" id="hn" href="https://www.linkedin.com/in/pranesh-ravi/" class="fancy">LinkedIn</a>
-            <a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
-          </div>
-        </div>
-        <div class="en-moonji">
-          <div class="mangala-theriyum">
-            <img src="img/beach.JPG" id="blur" alt="">
-            <img src="img/beach.JPG" alt="" id="pro-pic">
-          </div>
-          <a href="https://goo.gl/maps/PLzUKxDVGYo" target="_blank">The Shore Temple, Mahabalipuram</a>
-        </div>
-        <div class="enaku-therunjathu" id="skills">
-          <h2>Skills</h2>
-          <div class="enaku-therunjathu-list">
-            <div class="enaku-therunjathu-block">
-              <h4>User Experience Design</h4>
-              <div class="percentage-container">
-                <div class="percentage" id="ux"></div>
-              </div>
-            </div>
-            <div class="enaku-therunjathu-block">
-              <h4>User Interface Design</h4>
-              <div class="percentage-container">
-                <div class="percentage" id="ui"></div>
-              </div>
-            </div>
-            <div class="enaku-therunjathu-block">
-              <h4>HTML / CSS / SCSS</h4>
-              <div class="percentage-container">
-                <div class="percentage" id="html"></div>
-              </div>
-            </div>
-            <div class="enaku-therunjathu-block">
-              <h4>JavaScript / Node Js</h4>
-              <div class="percentage-container">
-                <div class="percentage" id="js"></div>
-              </div>
-            </div>
-            <div class="enaku-therunjathu-block">
-              <h4>React Js</h4>
-              <div class="percentage-container">
-                <div class="percentage" id="react"></div>
-              </div>
-            </div>
-            <div class="enna-pathi">
-              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI. Also, I have a good knowledge on Docker. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
-            </div>
-          </div>
-        </div>
-        <div class="na-senjathu" id="projects">
-          <h2>Projects</h2>
-          <div class="row">
-            <div class="thalaipu-matrum-matravai">
-              <div class="thalaipu">
-                The Movie & TV
-=======
       <div class="projects">
         <div class="row">
           <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
             <div class="project left">
               <div class="image m">
                 <img src="/img/mnt.png" alt="The Movie & TV">
->>>>>>> WIP - Rewamp
               </div>
               <div class="details">
                 <div class="title">The Movie & TV</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  A modern Progressive Web App built on top of the TMDB API. You can see information like ratings, cast and etc of any movie,
+                  TV show. You can also view details about your favorite celebrities.
                 </div>
               </div>
             </div>
-<<<<<<< HEAD
-            <div class="ithu-enna-seiyum">
-              A movie and TV show listing app with modern design and tech stack. I built this on the course of learning Progressive Web Apps.
-            </div>
-          </div>
-          <div class="row">
-            <div class="thalaipu-matrum-matravai">
-              <div class="thalaipu">
-                Crypto Info
-              </div>
-              <div class="matravai">
-                <span><a href="//www.npmjs.com/package/crypto-info" class="fancy">Npm</a></span>
-                <span><a href="//github.com/praneshr/crypto-info" class="fancy">Github</a></span>
-              </div>
-            </div>
-            <div class="ithu-enna-seiyum">
-              Check cryptocurrency price, market details and conversions in CLI 
-            </div>
-          </div>
-          <div class="row">
-            <div class="thalaipu-matrum-matravai">
-              <div class="thalaipu">
-                OSS at Indix
-              </div>
-              <div class="matravai">
-                <span><a href="//oss.indix.com" class="fancy">View Project</a></span>
-              </div>
-            </div>
-            <div class="ithu-enna-seiyum">
-              A place to showcase all the open source projects developed by the folks at Indix and to recognize all the contributors.
-            </div>
-          </div>
-          <div class="row">
-            <div class="thalaipu-matrum-matravai">
-              <div class="thalaipu">
-                React Forms
-              </div>
-              <div class="matravai">
-                <span><a href="//praneshravi.in/react-forms" class="fancy">View Project</a></span>
-                <span><a href="//github.com/praneshr/react-forms" class="fancy">Github</a></span>
-              </div>
-            </div>
-            <div class="ithu-enna-seiyum">
-              A simple, super-flexible, extensible config based form generator for React.
-            </div>
-=======
           </div>
           <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
             <div class="project right">
@@ -188,19 +77,24 @@
               <div class="details">
                 <div class="title">Crypto Info</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  A simple Node CLI tool to display information related to cryptocurrencies. It uses the coinmarketcap API. You can check market
+                  details, price, price change and do price conversions.
                 </div>
               </div>
             </div>
->>>>>>> WIP - Rewamp
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
             <div class="project left">
-              <div class="image r"></div>
+              <div class="image r">
+                <img src="/img/forms.png" alt="Crypto Info">
+              </div>
               <div class="details">
                 <div class="title">React Forms</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  A powerful, extensible, config based form generator for React. The idea of this project is to bring non Javascript developers and Javascript
+                  closer.
                 </div>
               </div>
             </div>
@@ -213,20 +107,22 @@
               <div class="details">
                 <div class="title">Indix OSS</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  A place to showcase all the open source projects developed by the folks at Indix and to recognize all the contributors.
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
             <div class="project left">
               <div class="image p">
                 <img src="/img/pixel2.png" alt="Pixel 2 landing page">
               </div>
               <div class="details">
-                <div class="title">Pixel 2 Landing Page Concept</div>
+                <div class="title">Pixel 2 Landing Page</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  Concept for Pixel 2 website. A good mix of bold blue color and subtle pattern.
                 </div>
               </div>
             </div>
@@ -239,7 +135,38 @@
               <div class="details">
                 <div class="title">Health App</div>
                 <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo eaque blanditiis ut rerum libero culpa quaerat placeat atque, cumque dolorem sunt, incidunt, nostrum ipsum doloremque consectetur veritatis accusamus ipsa!
+                  Redesigned Apple health app. A minimal UI design with a bold typeface to improve accessibility.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            <div class="project left">
+              <div class="image statements">
+                <img src="/img/statements.png" alt="Pixel 2 landing page">
+              </div>
+              <div class="details">
+                <div class="title">Statements</div>
+                <div class="description">
+                  Webapp concept where you can check your online spendings in detail. Provided
+                  with historical data and much more, you'll be able to track your spendings
+                  and make decisions.
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            <div class="project right">
+              <div class="image e">
+                <img src="/img/enai.png" alt="Health">
+              </div>
+              <div class="details">
+                <div class="title">Enai Noki Paayum Data</div>
+                <div class="description">
+                  Local swag made at Indix, mimicked from the movie <i>"Enai Noki Paayum Thota"</i>. This means,
+                  an unstoppable amount of data is forcing towards me, which is what we solve at work daily.
                 </div>
               </div>
             </div>
@@ -248,8 +175,22 @@
       </div>
     </div>
   </div>
+  </div>
   <div class="contact">
-    h
+    <div class="container">
+      <div class="footer">
+        <img src="/img/profile.jpg" alt="Profile">
+        <p class="credit">
+          Designed and devloped by Pranesh
+        </p>
+        <p class="license">
+          Hosted in Github Pages. Code is licensed under
+          <b>MIT</b> and open-sourced at <a href="https://github.com/praneshr/praneshr.github.io" target="_blank">Github</a>.
+          All images/graphics are licensed under <b>CC BY-SA</b>
+        </p>
+      </div>
+    </div>
   </div>
 </body>
+
 </html>
